# bf_dp4a

./: README.md  generate_wrapper.py  meson.build
bf_dp4a/: __init__.py  libbf_dp4a_wrapper.py
pythonsrc/: __init__.py  libbf_dp4a_wrapper.py
src/: beanfarmer.cu  beanfarmer.h  xcorr_lite.cu  xcorr_lite.h
testbench/: test_xcorr_lite.py
